--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -86,7 +86,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="35dp"
-                android:src="@drawable/ic_launcher"
+                android:src="@mipmap/ic_launcher_responsive"
                 tools:ignore="ContentDescription" />
 
             <TextView
