--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -36,7 +36,7 @@
                 android:layout_width="75dp"
                 android:layout_gravity="start"
                 android:layout_height="75dp"
-                android:background="@drawable/ic_launcher" />
+                android:background="@mipmap/ic_launcher_responsive" />
 
             <TextView
                 android:id="@+id/profile_name"
