--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -38,7 +38,7 @@
             android:summary="@string/hide_birthdays_summary"
             android:title="@string/hide_birthdays_title" />
         <SwitchPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="hide_menu_bar"
             android:summary="@string/hide_menu_bar_summary"
             android:title="@string/hide_menu_bar_title" />
