--- a/app/src/main/res/layout-land/activity_more.xml
+++ b/app/src/main/res/layout-land/activity_more.xml
@@ -105,7 +105,7 @@
 
         <fragment
             android:id="@+id/fragment_settings"
-            android:name="me.zeeroooo.materialfb.activities.More$MoreAndCredits"
+            android:name="me.zeeroooo.materialfb.activity.More$MoreAndCredits"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
