--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -14,7 +14,7 @@
             android:title="@string/start_url" />
         <SwitchPreference
             android:defaultValue="false"
-            android:key="location_enabled"
+            android:key="@string/pref_location_enabled"
             android:summary="@string/location_enabled_summary"
             android:title="@string/location_enabled_title" />
         <SwitchPreference
@@ -54,7 +54,7 @@
             android:title="@string/hide_recently_commented" />
         <ListPreference
             android:defaultValue="en"
-            android:key="localeSwitcher"
+            android:key="@string/pref_locale_switcher"
             android:summary="@string/localSwitcherSummary"
             android:title="@string/localSwitcherTitle"
             android:entries="@array/appLocalesNames"
@@ -86,11 +86,11 @@
     <PreferenceCategory android:title="@string/notifications_setting_title">
         <SwitchPreference
             android:defaultValue="false"
-            android:key="notif"
+            android:key="@string/pref_notif"
             android:title="@string/notif" />
         <Preference
             android:dependency="notif"
-            android:key="notifications_settings"
+            android:key="@string/pref_notifications_settings"
             android:summary="@string/notifications_settings_description"
             android:title="@string/notifications_settings" />
     </PreferenceCategory>
@@ -102,7 +102,7 @@
             android:title="@string/fab_enable" />
         <SwitchPreference
             android:defaultValue="false"
-            android:key="save_data"
+            android:key="@string/pref_save_data"
             android:summary="@string/save_data_summary"
             android:title="@string/save_data" />
         <SwitchPreference
@@ -111,13 +111,13 @@
             android:summary="@string/clearcache_summary"
             android:title="@string/clearcache" />
         <Preference
-            android:key="navigation_menu_settings"
+            android:key="@string/pref_navigation_menu_settings"
             android:summary="@string/navigation_menu_settings_description"
             android:title="@string/navigation_menu_settings" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/more">
         <Preference
-            android:key="moreandcredits"
+            android:key="@string/pref_more_and_credits"
             android:title="@string/more" />
     </PreferenceCategory>
 </PreferenceScreen>
