--- a/app/src/main/res/xml/navigation_menu_settings.xml
+++ b/app/src/main/res/xml/navigation_menu_settings.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="@string/navigation_menu_title">
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="nav_groups"
             android:summary="@string/menu_groups_summary"
             android:title="@string/menu_groups" />
@@ -12,7 +12,7 @@
             android:summary="@string/menu_mainmenu_summary"
             android:title="@string/menu_mainmenu" />
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="nav_most_recent"
             android:summary="@string/menu_most_recent_summary"
             android:title="@string/menu_most_recent" />
